Use mode_inp, create generator from load ElmLodmv
Signed-off-by: marquesja1 <marquesja@aia.es>